# mur

./: .install_tritech_micron.sh.swp  README.md  install_tritech_micron.sh
mur_arm/: CMakeLists.txt  package.xml
mur_arm/arm_firmware/: arm_firmware.ino
mur_arm/launch/: start_mur_arm.launch
mur_control/: CMakeLists.txt  package.xml  setup.py
mur_control/cfg/: MurAltitudeControl.cfg  MurAttitudeControl.cfg  MurControlMixer.cfg  MurHeightControl.cfg  MurPositionControl.cfg  MurVelocityControl.cfg  MurYawControl.cfg  mur_altitude_controller.cfg
mur_control/config/: TAM.yaml  apm_config.yaml  configuration.json  ekf_template.yaml  head_camera.yaml  laser_filter_config.yaml  mur_altitude_control.yaml  mur_attitude_control.yaml  mur_control_mixer.yaml  mur_height_control.yaml  mur_position_control.yaml  mur_velocity_control.yaml  mur_yaw_control.yaml  sonar_config.yaml  thruster_manager.yaml
mur_control/launch/: record_demo.launch  start_ekf_node.launch  start_mur_controller.launch  start_mur_controller_full.launch  start_mur_controller_sim.launch  start_mur_controller_sitl.launch  start_mur_dp_controller.launch  start_mur_dp_controller_full.launch  start_mur_gamepad.launch  start_mur_ident_lineales.launch  start_mur_ident_mass.launch  start_mur_localization.launch  start_mur_mavros.launch  start_mur_real.launch  start_mur_recorder.launch  start_mur_sonar.launch  start_thruster_manager.launch
mur_control/launch/experiments/: start_mur_controller_ident_ned.launch  start_mur_ident_lineales.launch  start_mur_test_paths.launch
mur_control/launch/real/: export_videos.launch  start_mur.launch  start_mur_bottom_camera.launch  start_mur_front_camera.launch  start_mur_mavros.launch  start_mur_pose.launch  start_mur_rviz.launch  start_mur_sonar.launch  start_mur_webserver.launch
mur_control/launch/sim/: start_mur_controller.launch  start_mur_controller_full.launch  start_mur_controller_sim.launch  start_mur_localization.launch
mur_control/rviz/: controller_demo.rviz  mur_real.rviz  mur_real_localization.rviz
mur_control/scripts/: calibrationFileName.xml  mur_altitude_control.py  mur_altitude_controller.py  mur_aruco_detector.py  mur_attitude_control.py  mur_attitude_pid.py  mur_attitude_tele.py  mur_barometer_parse.py  mur_control_mixer.py  mur_dp_controller.py  mur_ekf.py  mur_gamepad_force.py  mur_gamepad_parse.py  mur_height_control.py  mur_ident_lineales.py  mur_imu_parse.py  mur_pid_acc.py  mur_pose2d_parse.py  mur_position_control.py  mur_rosbag_converter.py  mur_sim_to_into.py  mur_sonar_converter.py  mur_stop_motors.py  mur_supervisor.py  mur_test_paths.py  mur_velocity_control.py  mur_yaw_control.py
mur_control/src/common/: __init__.py  mur_PID.py  mur_common.py
mur_description/: CMakeLists.txt  package.xml  setup.py
mur_description/config/: config.yaml
mur_description/launch/: upload_mur.launch  upload_mur_5.launch  upload_mur_default.launch  upload_mur_ident.launch  upload_mur_real.launch  upload_mur_sitl.launch
mur_description/mesh/: Micron DST Sonar.dae  Micron DST Sonar.stl  Micron DST Sonar.stp  mur.dae  mur.stl  mur.stp  mur_5.dae  mur_5.stl  mur_5.stp  mur_prop.dae  prop_simply.stl  prop_simply.stp
mur_description/meshes/: Micron DST Sonar.dae  link.dae  mur_prop.dae
mur_description/robots/: mur_5.urdf.xacro  mur_default.urdf.xacro  mur_ident.urdf.xacro  mur_sitl.urdf.xacro
mur_description/scripts/: mur_sim_to_into.py  mur_sim_to_out.py
mur_description/src/simtools/: __init__.py  mur_simtools.py
mur_description/urdf/: mur_actuators.xacro  mur_actuators_5.xacro  mur_base.xacro  mur_base_5.xacro  mur_base_ident.xacro  mur_sensors.xacro  mur_snippets.xacro
mur_navigation/: CMakeLists.txt  package.xml
mur_navigation/scripts/: mur_ekf.py
mur_server/: CMakeLists.txt  package.xml
mur_server/gui/udrobot/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
mur_server/gui/udrobot/e2e/src/: app.e2e-spec.ts
mur_server/gui/udrobot/src/: index.html
mur_server/gui/udrobot/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
mur_server/gui/udrobot/src/app/cameras/: cameras.component.css  cameras.component.html  cameras.component.ts
mur_server/gui/udrobot/src/app/controls/: controls.component.html  controls.component.ts
mur_server/gui/udrobot/src/app/dashboard/: dashboard.component.html  dashboard.component.ts
mur_server/gui/udrobot/src/app/navigation/: navigation.component.css  navigation.component.html  navigation.component.ts
mur_server/gui/udrobot/src/app/pose/: pose.component.css  pose.component.html  pose.component.ts
mur_server/gui/udrobot/src/app/settings/: settings.component.css  settings.component.html  settings.component.ts  settings.ts
mur_server/launch/: websocket.launch
