<?xml version="1.0"?>
<package format="2">
  <name>mur_control</name>
  <version>0.0.0</version>
  <description>The mur_control package</description>

  <maintainer email="js.cely@upm.es">Juan S. Cely</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

</package>
